--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,7 @@
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular-route/angular-route.js"></script>
 
+    <script src="app/game/game.js"></script>
     <script src="app/cards/cards.js"></script>
     <script src="app/app.js"></script>
   </body>
