Rename to Cardfight

--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="styles/style.css" />
   </head>
   <body>
-    <h1>Superfight</h1>
+    <h1>Cardfight</h1>
 
     <div ng-view></div>
 
